# TerraLink

./: .gitignore  README.md
Doniczka/: .cproject  .mxproject  .project  Doniczka Debug.launch  Doniczka.ioc
Doniczka/Core/Inc/: comm.h  flash_manage.h  hal_power.h  hal_rtc.h  main.h  packet.h  sensors.h  stm32l0xx_hal_conf.h  stm32l0xx_it.h
Doniczka/Core/Src/: SX1278_hw.c  comm.c  flash_manage.c  hal_power.c  hal_rtc.c  main.c  packet.c  sensors.c  stm32l0xx_hal_msp.c  stm32l0xx_it.c
Doniczka/Core/Startup/: startup_stm32l031k6tx.s
Sterownik/: .mxproject  .project  Sterownik Debug.launch  Sterownik.ioc
Sterownik/Core/Inc/: comm.h  flash_manage.h  main.h  packet.h  stm32l4xx_hal_conf.h
Sterownik/Core/Src/: SX1278_hw.c  comm.c  flash_manage.c  main.c  packet.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
TerraLink/: .cproject  CMakeLists.txt  Sterownik.ioc  arm-gcc-toolchain.cmake
TerraLink/Core/Inc/: flash_manage.h  main.h
TerraLink/Core/Src/: comm.c  packet.c  stm32l4xx_hal_msp.c
TerraLink/Inc/: Comm_impl.h  Flash.h  Flash_impl.h  NodeManage.h  NodeManage_impl.h  Packet_impl.h  STMDevice.h  STMDevice_impl.h  comm.h  flash_manage.h  packet.h
TerraLink/Src/: Flash.c  NodeManage.c  STMDevice.c  comm.c  flash_manage.c  main.c  packet.c  stm32l4xx_it.c
TerraNode/: .mxproject  CMakeLists.txt  Doniczka Debug.launch  Doniczka Release.launch
TerraNode/Core/Inc/: hal_power.h  stm32l0xx_hal_conf.h
TerraNode/Core/Src/: BH1750.c  flash_manage.c  stm32l0xx_it.c
TerraNode/Inc/: BH1750.h  Flash.h  Flash_impl.h  STMDevice.h  STMDevice_impl.h  comm.h  flash_manage.h  hal_rtc.h  main.h  packet.h  sensors.h
TerraNode/Src/: Flash.c  STMDevice.c  comm.c  flash_manage.c  hal_power.c  main.c  packet.c  sensors.c  stm32l0xx_hal_msp.c  syscalls.c
